--- a/src/index.css
+++ b/src/index.css
@@ -50,11 +50,10 @@
   }
 
   .container-custom {
-    @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
+    @apply max-w-[1536px] mx-auto px-6 sm:px-8 lg:px-12 xl:px-20;
   }
 
   .heading-serif {
     font-family: var(--font-heading);
   }
 }
-
